added get first method