@@ -6,8 +6,8 @@ public class twoDList {
         arr.add(new ArrayList<>());
         arr.add(new ArrayList<>());
         arr.add(new ArrayList<>());
-        arr.get(0).add(10);
-        arr.get(0).add(20);
+        arr.getFirst().add(10);
+        arr.getFirst().add(20);
         arr.get(0).add(3);
         arr.get(0).add(40);
         arr.get(1).add(53);
@@ -19,9 +19,6 @@ public class twoDList {
         arr.get(2).add(465);
         arr.get(2).add(45);
         arr.get(2).add(346);
-
-//        System.out.println(arr);
-
         for(int i=0; i<arr.size(); i++){
             for(int j=0; j<arr.get(i).size(); j++){
                 System.out.print(arr.get(i).get(j)+" ");
